** fixed bugs in code and removed copy number probes from output 
(now saved separately as before - SnpSuperSet not used)
** crlmmIllumina2() and crlmmIlluminaV2() now use the crlmmGT2() 
function (which expects ff objects and supports parallel processing)
** updated crlmmIllumina.pdf vignette

2010-04-11 R. Scharpf committed version 1.5.48
** added a few .Rd files

2010-04-16 B Carvalho committed version 1.5.49
** cosmetics - looking for cause of memory spike

2010-04-24 B Carvalho committed version 1.7.1
** fixed bug in gender prediction that cause a spike in memory usage

2010-05-25 R. Scharpf committed version 1.7.2
** added example dataset
** fixed vignette: inst/scripts/copynumber.Rnw

2010-05-25 R. Scharpf committed version 1.7.3
** put back in the following check in readIDAT (from r 45050):
  if(versionNumber<3)
    stop("Older style IDAT files not supported:  consider updating your scanner settings")

2010-05-25 R. Scharpf committed version 1.7.4
** wrapped readIDAT in a tryCatch()	   

2010-05-26 R. Scharpf committed version 1.7.5
** minor edits to inst/scripts/copynumber.Rnw

2010-07-25 M. Ritchie committed version 1.7.6
** fixed bug introduced in 1.7.4 by addition of tryCatch() into readIdatFiles().  Thanks to Nolwenn Le Meur for pointing this out.

2010--7-28 M. Ritchie committed version 1.7.7
** added omni express 12 as one of the chip options for Illumina.  Also added a check for copy number probes (this chip doesn't have any).

2010-07-30 R. Scharpf 1.7.8
** edited construct function for CNSetLM

2010-08-25 M. Ritchie 1.7.12
** Renamed functions readIdatFiles2() -> readIdatFiles(), RGtoXY2() -> RGtoXY(), preprocessInfinium2v2() -> preprocessInfinium2(), crlmmIllumina2() -> crlmmIllumina().  These make use of ff objects to store data.
** Exported crlmmIlluminaV2(), which combines reading in of idats and genotyping in one.  Also added a man page for this function
** tidied up crlmm-illumina.R, removing commented out code.